# NarratoAI

./: .gitignore  Dockerfile  README-en.md  README.md  config.example.toml  pyproject.toml
app/: __main__.py
app/api/: __init__.py  dependencies.py  main.py  test_api_media_integration.py  test_api_unittest.py
app/api/routes/: __init__.py  artifacts.py  batches.py  health.py  uploads.py
app/config/: config.py  defaults.py  model_registry.py  test_config_bootstrap_unittest.py  test_model_registry_unittest.py
app/models/: batch_schema.py  schema.py
app/services/: artifact_service.py  audio_merger.py  backend_settings.py  batch_processor.py  batch_store.py  deduplication_service.py  narration_pipeline.py  task.py  test_artifact_service_unittest.py  test_backend_settings_unittest.py  test_batch_processor_unittest.py  test_batch_store_unittest.py  test_deduplication_service_unittest.py  test_narration_pipeline_unittest.py  test_upload_service_unittest.py  upload_service.py  voice.py
app/services/documentary/: __init__.py  frame_analysis_service.py  test_frame_analysis_concurrency_unittest.py  video_narration_service.py
app/services/llm/: base.py  (+5 more)
config/: models.json
docs/: backend_api.yaml  backend_plan.md  batch_deduplication_design.md  frontend_plan.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
resource/borders/: README.md
scripts/: debug_narration_request.py  debug_seed_audio_request.py
tests/: test_script_service_documentary_unittest.py  test_video_narration_service.py
(+43 files in other folders)
