[project]
name = "narratoai"
version = "0.8.4"
description = "An all-in-one AI-powered tool for film commentary and automated video editing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "moviepy==2.1.1",
    "loguru>=0.7.3",
    "tomli-w>=1.0.0",
    "pydub==0.25.1",
    "openai>=1.77.0",
    "Pillow>=10.3.0",
    "tqdm>=4.66.6",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "python-multipart>=0.0.32",
]

[project.optional-dependencies]
local-asr = [
    "faster-whisper>=1.0.1",
]
opencv = [
    "opencv-python>=4.11.0.86",
]
cuda = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false
